# stratum

common/: Cargo.toml
common/src/: coinbase_output.rs  lib.rs  toml.rs  url.rs
common/src/constants/: mod.rs
roles/: Cargo.toml  structure.md
roles/jd-client/: Cargo.toml
roles/jd-client/config-examples/: jdc-config-hosted-example.toml  jdc-config-local-example.toml
roles/jd-client/src/: main.rs
roles/jd-client/src/lib/: config.rs  downstream.rs  error.rs  mod.rs  proxy_config.rs  status.rs
roles/jd-client/src/lib/job_declarator/: mod.rs
roles/jd-client/src/lib/template_receiver/: mod.rs
roles/jd-client/src/lib/upstream_sv2/: upstream.rs
roles/jd-server/: Cargo.toml
roles/jd-server/config-examples/: jds-config-hosted-example.toml  jds-config-local-example.toml
roles/jd-server/src/: main.rs
roles/jd-server/src/lib/: config.rs  mod.rs  status.rs
roles/jd-server/src/lib/job_declarator/: message_handler.rs  mod.rs
roles/jd-server/src/lib/mempool/: mod.rs
roles/mining-proxy/src/: main.rs
roles/mining-proxy/src/lib/: downstream_mining.rs  upstream_mining.rs
roles/pool/src/: main.rs
roles/pool/src/lib/: mod.rs  tcp_server.rs
roles/pool/src/lib/mining_pool/: mod.rs
roles/pool/src/lib/template_receiver/: mod.rs
roles/roles-utils/config-helpers/: Cargo.toml
roles/roles-utils/config-helpers/src/: coinbase_output.rs  lib.rs  toml.rs
roles/roles-utils/connection/: Cargo.toml
roles/roles-utils/connection/src/: lib.rs
roles/roles-utils/network-helpers/: Cargo.toml
roles/roles-utils/network-helpers/src/: lib.rs  noise_connection.rs  noise_connection_tokio.rs  noise_with_tokio_channels.rs  with_cancel.rs  with_cancellation.rs
roles/roles-utils/rpc/src/: mini_rpc_client.rs
roles/test-utils/downstream_mock/: Cargo.toml
roles/test-utils/downstream_mock/src/: main.rs
roles/test-utils/mining-device-sv1/src/: client.rs  miner.rs
roles/test-utils/mining-device/src/lib/: mod.rs
roles/test-utils/sv1-mining-device/src/: client.rs  main.rs
roles/test-utils/upstream_mock/: Cargo.toml
roles/test-utils/upstream_mock/src/: main.rs
roles/tests-integration/: Cargo.toml
roles/tests-integration/lib/: mod.rs  snifer_tokio.rs  sniffer.rs  template_provider.rs
roles/tests-integration/tests/: integration_e2e.rs  jd_integration.rs  pool_integration.rs  sniffer_integration.rs  tproxy_jd_setup.rs  translator_integration.rs
roles/tests-integration/tests/common/: mod.rs  sniffer.rs
roles/translator/: Cargo.toml
roles/translator/src/: main.rs
roles/translator/src/lib/: mod.rs  proxy_config.rs  status.rs
roles/translator/src/lib/downstream_sv1/: downstream.rs
roles/translator/src/lib/proxy/: bridge.rs
roles/translator/src/lib/upstream_sv2/: upstream.rs
scripts/: clippy-checks.sh  fmt-checks.sh  semver-checks.rs
(+36 files in other folders)
