[package]
name = "stratum-common"
version = "1.0.0"
edition = "2018"
description = "SV2 pool role"
license = "MIT OR Apache-2.0"
repository = "https://github.com/stratum-mining/stratum"

[dependencies]
bitcoin = {version="0.29.1",optional=true}
secp256k1 = { version = "0.28.2", default-features = false, features =["alloc","rand","rand-std"] }
serde = { version = "1.0.89", default-features = false, features = ["derive", "alloc"],  optional = true }
roles_logic_sv2 = { path = "../protocols/v2/roles-logic-sv2", optional = true }

[features]
default = ["serde"]
serde = ["dep:serde", "roles_logic_sv2"]
