[workspace]

resolver="2"

members = [
    "mining-proxy",
    "pool",
    "test-utils/mining-device",
    "test-utils/mining-device-sv1",
    "translator",
    "jd-client",
    "jd-server",
    "tests-integration", "test-utils/downstream_mock", "test-utils/upstream_mock", "roles-utils/connection",
]

[profile.dev]
# Required by super_safe_lock
opt-level = 1

[profile.test]
# Required by super_safe_lock
opt-level = 1
