[package]
name = "tests-integration"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = "1.38.1"

[dev-dependencies]
jd_client = { version = "0.1.1", path = "../jd-client" }
translator_sv2 = { version = "0.1.0", path = "../translator" }
jd_server = { version = "0.1.1", path = "../jd-server" }
pool_sv2 = { version = "0.1.1", path = "../pool" }
async-channel = "1.5.1"
async-std = { version = "1.8.0" }
key-utils = { version = "1.1.0", path = "../../utils/key-utils" }

[[test]]
name = "integration_e2e"


