[package]
name = "connection"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
binary_sv2 = { path = "../../../protocols/v2/binary-sv2/binary-sv2" }
codec_sv2 = { path = "../../../protocols/v2/codec-sv2", features=["noise_sv2"] }
const_sv2 = {path = "../../../protocols/v2/const-sv2"}
tracing = { version = "0.1" }
roles_logic_sv2 = { path = "../../../protocols/v2/roles-logic-sv2" }
key-utils = { path = "../../../utils/key-utils" }
