[package]
name = "downstream_mock"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
connection = { path = "../../roles-utils/connection" }
codec_sv2 = { path = "../../../protocols/v2/codec-sv2", features = ["noise_sv2", "with_buffer_pool"] }
binary_sv2 = { path = "../../../protocols/v2/binary-sv2/binary-sv2", features = ["with_buffer_pool"] }
roles_logic_sv2 = { path = "../../../protocols/v2/roles-logic-sv2" }
key-utils = { path = "../../../utils/key-utils" }
